<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/movie_icon"
            android:id="@+id/miImageView"
            android:importantForAccessibility="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peliculas"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-20dp"
        >
        <LinearLayout

            android:layout_width="413dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_registrar"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registronuevo"
                android:alpha="0.7"
                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:alpha="0.7"/>

            <EditText
                android:id="@+id/editTextNombreUsuario"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:hint="@string/hint_nombre_usuario"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/hint_nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextNombreUsuario" />

            <EditText
                android:id="@+id/editTextApellidos"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/hint_apellidos"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextNombre" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextApellidos" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/hint_contrasena"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/boton_registrarse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPassword"
                android:layout_marginTop="16dp"
                />
            <Button
                android:id="@+id/btnIrALogin"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/boton_ir_a_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegistrarse"
                android:layout_marginTop="20dp"
                />






        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>