<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/movie_icon"
            android:id="@+id/miImageView"
            android:importantForAccessibility="no" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peliculas"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp"
                android:textColor="@color/white"
           />
    </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="30dp"
            android:layout_marginBottom="-20dp"
            >
            <LinearLayout

                android:layout_width="413dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/my_primary"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credenciales"
                    android:alpha="0.7"
                    />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/User_Name"
                    android:alpha="0.7"/>
                <EditText
                    android:id="@+id/editTextCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck"
                    android:autofillHints="" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:alpha="0.7"/>
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:autofillHints="" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/boton_login"
                    app:cornerRadius="32dp"
                    />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp">
                    <Button
                        android:id="@+id/btnRegistrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boton_registrar"
                        android:layout_margin="5dp"                     />
                </LinearLayout>


            </LinearLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>